--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ test:
 
 production:
   production:
-  database: test_app_production
+  database: realworld_api_production
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
